Added drag-drop functionality to the sample site

--- a/sample.html
+++ b/sample.html
@@ -11,8 +11,8 @@
     <title>Music Mixer</title>
 </head>
 <body>
-    <header class="centered">
-        <h1>The Music Mixer Project</h1>    
+    <header class="grid-con centered">
+        <h1 class="col-span-full">The Music Mixer Project</h1>    
     </header>
     
     <main class="grid-con centered">
